@@ -9,8 +9,8 @@ AUX jruby-1.4.0-system-jars.patch 8423 RMD160 84fd92c13e953eb44c091b77bbbdd0d0c0
 AUX user-test-fixes.patch 5147 RMD160 6258879413ae81a18d0c6bcaa3b0661d86a0d14a SHA1 32d3f80db383cf664c9ad1f9e52c2688ae3cbe5c SHA256 f21469d41de9f9b5fb1682596f64899a71c92332db24bf27e8c50dbb1896a92e
 DIST jruby-src-1.3.1.tar.gz 12076705 RMD160 ef10395dbdf9490820caa65ff6236dd99e7c62c8 SHA1 e4de71e5c01f71f236b3135e07a5841784767fd8 SHA256 9095b0bec0ee8e6cd96b72c7f2aec8a90fa429b840484d57a48d8fb760aae600
 DIST jruby-src-1.4.0.tar.gz 12731458 RMD160 70b6a34a9e1b174fe1c8f1df8ba8ea7cbfa4da37 SHA1 3d6f634e16b789a5a086327c0f09710dd29d1ec7 SHA256 b9fd84ed097ac136afce4462a13bb0752bab467db203ed3797e228a435e26d23
-EBUILD jruby-1.3.1-r1.ebuild 6041 RMD160 23822721307edc24b2b5737aaeba055e80bfdf8f SHA1 7143b1c83c4d67dc33d59e105ff198c3329ea7d6 SHA256 21c8acf334937543cf2e65f7b78482c6ed344e52ebe5de4de269ec19f99fd23a
-EBUILD jruby-1.4.0-r4.ebuild 5719 RMD160 7468cf526d741da617a566438fa3e6967d7d6b5a SHA1 9aa7f3dc493891fb36a870c3347c0ff44f6109b2 SHA256 ce54096de8ae07ed31590bcfa0bd5d4001a833251ed5a96379e322891647f49f
-EBUILD jruby-1.4.0-r5.ebuild 5732 RMD160 147b3fc16b9c0af18f6dafd6242204328c3e907c SHA1 cebfcff4e96c31cdea86eda5fe61fc15558e1bb6 SHA256 f06108e0ec7073eaf54ef094e57d1b5abc5de020f7ab7a6a4c9ee68581b7ff39
-MISC ChangeLog 10283 RMD160 0ecb3e14a6d4450cf44468d0603ebeb6a56f7a4e SHA1 4aea4ced3176332a168152f91a5304b32960619d SHA256 16937db65ae9cd5a2d1b4548d07401afb86b7f65288e9af8abf3a5f78dca0954
+EBUILD jruby-1.3.1-r1.ebuild 5901 RMD160 45f0ee9ace8e3c1bfaf7d39b00d0c4998f0e1c57 SHA1 89072db4e4f4c0d5778121da31e87891518d5c20 SHA256 3f8dae35c2052f3b8f917d65f49bee4be106dea43e95978aa0ee46cad8b887d6
+EBUILD jruby-1.4.0-r4.ebuild 5579 RMD160 1b28baa77bc7271f663f5491363051e59ba153c4 SHA1 58175e55baefa048f89cbc5cecc42f41873c9f9c SHA256 85d32e42af0e4a6649b68ea7285b5681b9fda8f205d13c9aa583d7c1ca36eb65
+EBUILD jruby-1.4.0-r5.ebuild 5592 RMD160 16734a7caa3c0566121ea26ce67cd30c897669e7 SHA1 61828d32d1ff8a1b4ff69cc0fb042cabf2304b3c SHA256 d29f2cd0f02b78793a9f07d869968889957832a7f4bfb10a986b7c7300a47a0a
+MISC ChangeLog 10510 RMD160 ccb0e5a636166a62a713a86b3efce519c6c51cb7 SHA1 9f01aa395d98502613cecb97852ebffe3bf365d4 SHA256 9a39061a4aad88162917ce5d38e03ed196c2deb6430ac6354e1d14a51b839673
 MISC metadata.xml 179 RMD160 3813d8d3651faaf99042cb3c776d0bc59ad7b5b4 SHA1 421371d5338c6b9b8b4950c44d78a9dbe79cf64d SHA256 0df27adc265ef6596f973641d25b64b7291c87f1b114d6895f69d222049bed1b
